# projekt

./: CMakeLists.txt  Graph.cpp  Graph.h  GraphMain.cpp  GraphTest.cpp  dinoboitest.cpp  tester.cpp
Textfiler_med_grafer/: graph01.txt  graph02.txt  graph03.txt  graph05.txt  graph06.txt
